--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -5,7 +5,7 @@ environment=development
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
-spring.datasource.url=jdbc:postgresql://
+spring.datasource.url=
 spring.datasource.username=
 spring.datasource.password=
 
@@ -15,3 +15,5 @@ refresh-token.private=[key]-refresh-token-private
 refresh-token.public=[key]-refresh-token-public.pub
 
 rumi.security.token.duration.minutes=10
+
+jikan.api.root=https://api.jikan.moe/v4
