--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ environment=development
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
-spring.datasource.url=jdbc:postgresql://localhost/rumi-test
+spring.datasource.url=jdbc:postgresql://35.240.243.130/rumi_dev?sslmode=require
 spring.datasource.username=rumi
 spring.datasource.password=rumirumi
 
