chore: add consumet api to application properties

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -17,4 +17,5 @@ refresh-token.public=[key]-refresh-token-public.pub
 rumi.security.token.duration.minutes=10
 
 jikan.api.root=https://api.jikan.moe/v4
+consumet.api.root=https://consumet.cekrek.shop
 jikan.anime.scrape.rate.cronjob=*/6 * * * * *
