--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 spring.application.name=rumi-api
-environment=development
+environment=production
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
@@ -16,4 +16,5 @@ refresh-token.public=[key]-refresh-token-public.pub
 rumi.security.token.duration.minutes=10
 
 jikan.api.root=https://api.jikan.moe/v4
+consumet.api.root=https://consumet.cekrek.shop
 jikan.anime.scrape.rate.cronjob=*/6 * * * * *
