--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,5 +1,5 @@
 spring.application.name=rumi-api
-environment=development
+environment=test
 
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.ddl-auto=create
@@ -17,4 +17,5 @@ refresh-token.public=[key]-refresh-token-public.pub
 rumi.security.token.duration.minutes=10
 
 jikan.api.root=https://api.jikan.moe/v4
+consumet.api.root=https://consumet.cekrek.shop
 jikan.anime.scrape.rate.cronjob=*/6 * * * * *
