--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,5 +24,5 @@ jobs:
             cd ${{ secrets.REPO_NAME }}
             git pull
             docker compose stop
-            docker compose build --no-cache
+            docker compose build --no-cache -q
             docker compose up -d
