refac: better error handling

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 spring.application.name=rumi-api
 
-#spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
 spring.datasource.url=jdbc:postgresql://ep-silent-silence-a1kfrmlm.ap-southeast-1.aws.neon.tech/rumi-db?sslmode=require
@@ -16,5 +16,4 @@ refresh-token.public=[key]-refresh-token-public.pub
 rumi.security.token.duration.minutes=10
 
 jikan.api.root=https://api.jikan.moe/v4
-consumet.api.root=https://consumet.cekrek.shop
 jikan.anime.scrape.rate.cronjob=*/6 * * * * *
