refac: cache ttl variable

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@ spring.application.name=rumi-api
 
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 spring.datasource.url=jdbc:postgresql://ep-silent-silence-a1kfrmlm.ap-southeast-1.aws.neon.tech/rumi-db?sslmode=require
 spring.datasource.username=doddy-s
@@ -17,3 +17,5 @@ rumi.security.token.duration.minutes=10
 
 jikan.api.root=https://api.jikan.moe/v4
 jikan.anime.scrape.rate.cronjob=*/6 * * * * *
+
+consumet.cache.ttl=10
