--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -16,3 +16,5 @@ rumi.security.token.duration.minutes=10
 
 jikan.api.root=https://api.jikan.moe/v4
 jikan.anime.scrape.rate.cronjob=*/6 * * * * *
+
+consumet.cache.ttl=10
